@@ -1,4 +1,4 @@
-#!/bin/bash -e
+#!/usr/bin/env bash
 # =====================================================================
 # Build script running OpenNMS in Docker environment
 #
@@ -10,6 +10,8 @@
 # Cause false/positives
 # shellcheck disable=SC2086
 
+set -e
+
 umask 002
 OPENNMS_HOME="/opt/opennms"
 
@@ -20,6 +22,18 @@ OPENNMS_OVERLAY_JETTY_WEBINF="/opt/opennms-jetty-webinf-overlay"
 # Error codes
 E_ILLEGAL_ARGS=126
 E_INIT_CONFIG=127
+
+MYID="$(id -u)"
+MYUSER="$(getent passwd "${MYID}" | cut -d: -f1)"
+
+export RUNAS="${MYUSER}"
+
+if [ "$MYID" -eq 0 ]; then
+  if ! grep -Fxq "RUNAS=${MYUSER}" "${OPENNMS_HOME}/etc/opennms.conf"; then
+      echo "RUNAS=${MYUSER}" >> "${OPENNMS_HOME}/etc/opennms.conf"
+  fi
+  chown "$MYUSER" "${OPENNMS_HOME}/etc/opennms.conf"
+fi
 
 # Help function used in error messages and -h option
 usage() {
@@ -133,18 +147,19 @@ applyOverlayConfig() {
 start() {
   local OPENNMS_JAVA_OPTS="--add-modules=java.base,java.compiler,java.datatransfer,java.desktop,java.instrument,java.logging,java.management,java.management.rmi,java.naming,java.prefs,java.rmi,java.scripting,java.security.jgss,java.security.sasl,java.sql,java.sql.rowset,java.xml,jdk.attach,jdk.httpserver,jdk.jdi,jdk.sctp,jdk.security.auth,jdk.xml.dom \
   -Dorg.apache.jasper.compiler.disablejsr199=true
-  -Dopennms.home=/opt/opennms
-  -Dopennms.pidfile=/opt/opennms/logs/opennms.pid
+  -Dopennms.home=${OPENNMS_HOME}
+  -Dopennms.pidfile=${OPENNMS_HOME}/logs/opennms.pid
   -XX:+HeapDumpOnOutOfMemoryError
   -Dcom.sun.management.jmxremote.authenticate=true
   -Dcom.sun.management.jmxremote.login.config=opennms
-  -Dcom.sun.management.jmxremote.access.file=/opt/opennms/etc/jmxremote.access
+  -Dcom.sun.management.jmxremote.access.file=${OPENNMS_HOME}/etc/jmxremote.access
   -DisThreadContextMapInheritable=true
+  -Djdk.attach.allowAttachSelf=true
   -Dgroovy.use.classvalue=true
-  -Djava.io.tmpdir=/opt/opennms/data/tmp
+  -Djava.io.tmpdir=${OPENNMS_HOME}/data/tmp
   -Djava.locale.providers=CLDR,COMPAT
   -XX:+StartAttachListener"
-  exec ${JAVA_HOME}/bin/java ${OPENNMS_JAVA_OPTS} ${JAVA_OPTS} -jar /opt/opennms/lib/opennms_bootstrap.jar start
+  exec ${JAVA_HOME}/bin/java ${OPENNMS_JAVA_OPTS} ${JAVA_OPTS} -jar ${OPENNMS_HOME}/lib/opennms_bootstrap.jar start
 }
 
 # Evaluate arguments for build script.
